--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery (Галерея)</title>
-    <link rel="stylesheet" href="./style/main.css"/>
+    <link rel="stylesheet" href="./style/main.css" />
   </head>
   <body>
     <div class="header">
@@ -144,12 +144,12 @@
     <div class="footer">
       <h3>Мы в социальных сетях:</h3>
       <ul class="footer_navigation">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="https://www.instagram.com/"></a></li>
+        <li><a href="https://www.linkedin.com/"></a></li>
+        <li><a href="https://www.viber.com/"></a></li>
+        <li><a href="https://www.facebook.com/"></a></li>
+        <li><a href="https://web.telegram.org/#/login"></a></li>
+        <li><a href="https://www.skype.com/"></a></li>
       </ul>
     </div>
   </body>
