--- a/index.html
+++ b/index.html
@@ -159,13 +159,29 @@
     <div class="footer">
       <h3>Мы в социальных сетях:</h3>
       <ul class="footer_navigation">
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
+        <li><a href="https://www.instagram.com/"></a></li>
+        <li><a href="https://www.linkedin.com/"></a></li>
+        <li><a href="https://www.viber.com/"></a></li>
+        <li><a href="https://www.facebook.com/"></a></li>
+        <li><a href="https://web.telegram.org/#/login"></a></li>
+        <li><a href="https://www.skype.com/"></a></li>
       </ul>
     </div>
+    <div class="socials_wrapper">
+      <div class="button_wrapper">
+        <div class="button">
+          <p>Hover me!</p>
+        </div>
+      </div>
+      <div class="socials">
+        <ul class="socials_icons">
+          <li><a href="https://www.instagram.com/"></a></li>
+          <li><a href="https://www.viber.com/"></a></li>
+          <li><a href="https://www.facebook.com/"></a></li>
+          <li><a href="https://www.skype.com/"></a></li>
+        </ul>
+      </div>
+    </div>
+    <script></script>
   </body>
 </html>
