--- a/gallery.html
+++ b/gallery.html
@@ -152,5 +152,21 @@
         <li><a href="https://www.skype.com/"></a></li>
       </ul>
     </div>
+    <div class="socials_wrapper">
+      <div class="button_wrapper">
+        <div class="button">
+          <p>Hover me!</p>
+        </div>
+      </div>
+      <div class="socials">
+        <ul class="socials_icons">
+          <li><a href="https://www.instagram.com/"></a></li>
+          <li><a href="https://www.viber.com/"></a></li>
+          <li><a href="https://www.facebook.com/"></a></li>
+          <li><a href="https://www.skype.com/"></a></li>
+        </ul>
+      </div>
+    </div>
+    <script></script>
   </body>
 </html>
