--- a/index.html
+++ b/index.html
@@ -155,7 +155,6 @@
         позволят достигнуть исключительной растяжки.
       </blockquote>
       <p><cite> «Гибкость, Сила, Выносливость»</cite>Попенко В.А.</p>
-    </div>
     <div class="footer">
       <h3>Мы в социальных сетях:</h3>
       <ul class="footer_navigation">
@@ -168,20 +167,14 @@
       </ul>
     </div>
     <div class="socials_wrapper">
-      <div class="button_wrapper">
-        <div class="button">
-          <p>Hover me!</p>
-        </div>
-      </div>
-      <div class="socials">
-        <ul class="socials_icons">
-          <li><a href="https://www.instagram.com/"></a></li>
-          <li><a href="https://www.viber.com/"></a></li>
-          <li><a href="https://www.facebook.com/"></a></li>
-          <li><a href="https://www.skype.com/"></a></li>
-        </ul>
-      </div>
+      <ul class="socials_icons">
+        <li><a href="https://www.instagram.com/"></a></li>
+        <li><a href="https://www.viber.com/"></a></li>
+        <li><a href="https://www.facebook.com/"></a></li>
+        <li><a href="https://www.skype.com/"></a></li>
+      </ul>
+      <h4 class="button">Hover me!</h4>
     </div>
-    <script> </script>
+    <script></script>
   </body>
 </html>
