--- a/gallery.html
+++ b/gallery.html
@@ -153,19 +153,13 @@
       </ul>
     </div>
     <div class="socials_wrapper">
-      <div class="button_wrapper">
-        <div class="button">
-          <p>Hover me!</p>
-        </div>
-      </div>
-      <div class="socials">
-        <ul class="socials_icons">
-          <li><a href="https://www.instagram.com/"></a></li>
-          <li><a href="https://www.viber.com/"></a></li>
-          <li><a href="https://www.facebook.com/"></a></li>
-          <li><a href="https://www.skype.com/"></a></li>
-        </ul>
-      </div>
+      <ul class="socials_icons">
+        <li><a href="https://www.instagram.com/"></a></li>
+        <li><a href="https://www.viber.com/"></a></li>
+        <li><a href="https://www.facebook.com/"></a></li>
+        <li><a href="https://www.skype.com/"></a></li>
+      </ul>
+      <h4 class="button">Hover me!</h4>
     </div>
     <script></script>
   </body>
